# homelab-sre-agent

./: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: container.yml  homelab-sre-codex.yml  homelab-sre-investigate.yml  homelab-sre-routing-metadata.yml
docs/: architecture.md  configuration.md  diagnostic-security.md
examples/: homelab-sre-investigate.yml  services.yaml
homelab_sre_agent/: __init__.py  __main__.py  config.py  diagnostics.py  docker_logs.py  github.py  metadata.py  notifications.py  redact.py  routing_metadata.py  server.py  service.py  state.py
tests/: test_routing_metadata.py  test_sre_agent.py
