[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "homelab-sre-agent"
version = "0.1.0"
description = "Incident enrichment and GitHub issue coordinator for homelab logs"
requires-python = ">=3.12"
dependencies = [
  "boto3>=1.34,<2",
  "docker>=7.1,<8",
  "homelab-functions @ https://github.com/feocco/homelab-functions/archive/refs/heads/main.zip",
  "PyJWT[crypto]>=2.10,<3",
  "PyYAML>=6,<7",
]

[project.optional-dependencies]
test = [
  "pytest>=8,<9",
]

[project.scripts]
homelab-sre-agent = "homelab_sre_agent.__main__:main"
